--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <main>
             <div class="container">
                 <h2>Background Color : <span class ="color">
-                    #f1f5f8
+                    rgb(255,255,255)
                 </span></h2>
                 <button class ="btn btn-hero" id="btn">Click me</button>
             </div>
